# Simple_Decompositions

./: CMakeLists.txt  README.md  generate.bat  generate.sh
app/: CMakeLists.txt  Test_Decompositions.cpp
include/: Decompositions.hpp
lib/: CMakeLists.txt
test/: CMakeLists.txt  Test_Decompositions.cpp
